Add file working
Add library re and fix function

--- a/scrapy.ipynb
+++ b/scrapy.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lxml.html as parser\n",
     "import requests\n",
     "import csv\n",
+    "import re\n",
     "from urllib.parse import urlsplit, urljoin\n",
     "import time\n",
     "import numpy as np\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
     "    r = requests.get(start_url)\n",
     "    html = parser.fromstring(r.text)\n",
     "    links = html.xpath(\"//a[@class='OLXad-list-link']/@href\")\n",
-    "    links = [urljoin(base_url, l) for l in links]\n",
+    "    links = [urljoin(start_url, l) for l in links]\n",
     "    links = [urlsplit(l)._replace(query=\"\").geturl() for l in links]\n",
     "    next_page = html.xpath(\"//div[@class='module_pagination']//ul[@class='list']//li[@class='item number']/a/@href\")[0]\n",
     "    return links, next_page\n",
@@ -117,73 +118,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Página => 0\n",
-      "Página => 1\n",
-      "Página => 2\n",
-      "Página => 3\n",
-      "Página => 4\n",
-      "Página => 5\n",
-      "Página => 6\n",
-      "Página => 7\n",
-      "Página => 8\n",
-      "Página => 9\n",
-      "Página => 10\n",
-      "Página => 11\n",
-      "Página => 12\n",
-      "Página => 13\n",
-      "Página => 14\n",
-      "Página => 15\n",
-      "Página => 16\n",
-      "Página => 17\n",
-      "Página => 18\n",
-      "Página => 19\n",
-      "Página => 20\n",
-      "Página => 21\n",
-      "Página => 22\n",
-      "Página => 23\n",
-      "Página => 24\n",
-      "Página => 25\n",
-      "Página => 26\n",
-      "Página => 27\n",
-      "Página => 28\n",
-      "Página => 29\n",
-      "Página => 30\n",
-      "Página => 31\n",
-      "Página => 32\n",
-      "Página => 33\n",
-      "Página => 34\n",
-      "Página => 35\n",
-      "Página => 36\n",
-      "Página => 37\n",
-      "Página => 38\n",
-      "Página => 39\n",
-      "Página => 40\n",
-      "Página => 41\n",
-      "Página => 42\n",
-      "Página => 43\n",
-      "Página => 44\n",
-      "Página => 45\n",
-      "Página => 46\n",
-      "Página => 47\n",
-      "Página => 48\n",
-      "Página => 49\n",
-      "Página => 50\n",
-      "Página => 51\n",
-      "Página => 52\n",
-      "Página => 53\n",
-      "Página => 54\n",
-      "Página => 55\n",
-      "Página => 56\n",
-      "Página => 57\n",
-      "Página => 58\n",
-      "Página => 59\n"
+      "Página => 0\n"
      ]
     }
    ],
    "source": [
     "df_t = pd.DataFrame()\n",
     "next_page = 'https://sp.olx.com.br/grande-campinas/regiao-de-campinas/campinas/imoveis/aluguel/2-quartos?gsp=1'\n",
-    "for i in range(200):\n",
+    "for i in range(150):\n",
     "    print('Página =>',i)\n",
     "    try:\n",
     "        n_links, next_page = get_links_page(next_page)\n",
@@ -191,24 +133,9 @@
     "        df_t = pd.concat([df_t,df])\n",
     "    except:\n",
     "        print('Erro na busca de novas páginas.')\n",
-    "        break"
+    "        break\n",
+    "df_t.to_excel('Anúncios_28_01_2019.xlsx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 338,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_t.to_excel('Anúncios.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
